--- a/src/Mod/Draft/Resources/ui/userprefs-base.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-base.ui
@@ -469,7 +469,7 @@
            <string>Snap maximum</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>maxSnap</cstring>
@@ -494,6 +494,9 @@
         </item>
         <item>
          <widget class="QLabel" name="label_23">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="toolTip">
            <string>Maximum number of edges to be considered for snapping</string>
           </property>
@@ -504,6 +507,9 @@
         </item>
         <item>
          <widget class="Gui::PrefSpinBox" name="gui::prefspinbox_6">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="maximum">
            <number>999</number>
           </property>
@@ -628,7 +634,7 @@
            <string>Use grid</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <property name="prefEntry" stdset="0">
            <cstring>grid</cstring>
@@ -653,6 +659,9 @@
         </item>
         <item>
          <widget class="QLabel" name="label_15">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Grid spacing</string>
           </property>
@@ -660,6 +669,9 @@
         </item>
         <item>
          <widget class="Gui::PrefDoubleSpinBox" name="gui::prefdoublespinbox_3">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="toolTip">
            <string>The spacing between each grid line</string>
           </property>
@@ -676,6 +688,9 @@
         </item>
         <item>
          <widget class="QLabel" name="label_16">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>Main lines every</string>
           </property>
@@ -683,6 +698,9 @@
         </item>
         <item>
          <widget class="Gui::PrefSpinBox" name="gui::prefspinbox_4">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="toolTip">
            <string>Mainlines will be drawn thicker. Specify here how many squares between mainlines.</string>
           </property>
