--- a/src/Mod/PartDesign/Gui/TaskMultiTransformParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskMultiTransformParameters.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>225</width>
-    <height>559</height>
+    <height>182</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,7 +36,14 @@
     </widget>
    </item>
    <item>
-    <widget class="QListWidget" name="listTransformFeatures"/>
+    <widget class="QListWidget" name="listTransformFeatures">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>80</height>
+      </size>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="checkBoxUpdateView">
@@ -47,19 +54,6 @@
       <bool>true</bool>
      </property>
     </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
