--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -53,6 +53,7 @@
         <file>icons/Sketcher_CreateArc.svg</file>
         <file>icons/Sketcher_Create3PointArc.svg</file>
         <file>icons/Sketcher_CreateCircle.svg</file>
+        <file>icons/Sketcher_Create3PointCircle.svg</file>
         <file>icons/Sketcher_CreateLine.svg</file>
         <file>icons/Sketcher_CreatePoint.svg</file>
         <file>icons/Sketcher_CreatePolyline.svg</file>
