--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -45,6 +45,7 @@
         <file>icons/Arch_StructuralSystem.svg</file>
         <file>icons/Arch_StructuralSystem_Tree.svg</file>
         <file>ui/archprefs-base.ui</file>
+        <file>ui/archprefs-defaults.ui</file>
         <file>ui/archprefs-import.ui</file>
         <file>ui/ParametersWindowDouble.svg</file>
         <file>ui/ParametersWindowSimple.svg</file>
